updated order cancellation html

--- a/src/core/utils/mail/templates/orderCancellation.hbs
+++ b/src/core/utils/mail/templates/orderCancellation.hbs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body style="width: 100% !important; height: 100% !important;">
     <div style="margin: 0 auto; border: 1px solid black; background-color: white; border-radius: 10px; margin: 0px 10px !important;">
@@ -14,37 +14,29 @@
 
       <table style="width: 100%; table-layout: fixed;">
           <tr>
-            <td style="width: 75%;"></td>
-            <td style="width: 25%;">
-              <p style="margin: 0px 0px 4px 0px !important">
-                <span style="font-weight: 800; margin-right: 5px; letter-spacing: 1px;">Order #:</span> 
+            <td style="width: 100%;">
+              <p style="margin: 0px 0px 4px 0px !important; font-size: small">
+                <span style="font-weight: 700; margin-right: 5px; letter-spacing: 1px;">Order #:</span> 
                 c91a3a64-4b3c-44b3-95bd-02923db0feca
               </p>
             </td>
           </tr>
           <tr>
-            <td style="width: 80%;"></td>
-            <td style="width: 20%;">
-              <p style="margin: 0px 8px 4px 0px !important">
-                <span style="font-weight: 800; margin-right: 5px; letter-spacing: 1px;">Order date:</span>
+            <td style="width: 100%;">
+              <p style="margin: 0px 8px 4px 0px !important; font-size: small">
+                <span style="font-weight: 700; margin-right: 5px; letter-spacing: 1px;">Order date:</span>
                 2021-10-10 14:00:00
               </p>
             </td>
           </tr>
           <tr>
-            <td style="width: 80%"></td>
-            <td style="width: 20%;">
-              <p style="margin: 0px 8px 4px 0px !important"><span style="font-weight: 800; margin-right: 5px; letter-spacing: 1px;">Cancel reason:</span> Cancelled by customer</p></td>
+            <td style="width: 100%;">
+              <p style="margin: 0px 8px 4px 0px !important; font-size: small">
+                <span style="font-weight: 700; margin-right: 5px; letter-spacing: 1px;">Cancel reason:</span> Cancelled by customer
+              </p>
+            </td>
           </tr>
       </table>
-      <!-- <div style="display: flex; justify-content: space-between; align-items: center;">
-        <img src="https://firebasestorage.googleapis.com/v0/b/rocket-delivery-f95dc.appspot.com/o/rocket-delivery.png?alt=media&token=d64379ee-1524-44c5-aa4b-f7d917b7559c" style="display: block; width: 110px; height: 100px; border-top-left-radius: 10px;"/>
-        <div style="align-items: center;">
-          <p style="margin: 0px 8px 4px 0px !important"><span style="font-weight: 800; margin-right: 5px; letter-spacing: 1px;">Order #:</span> c91a3a64-4b3c-44b3-95bd-02923db0feca</p>
-          <p style="margin: 0px 8px 4px 0px !important"><span style="font-weight: 800; margin-right: 5px; letter-spacing: 1px;">Order date:</span> 2021-10-10 14:00:00</p>
-          <p style="margin: 0px 8px 4px 0px !important"><span style="font-weight: 800; margin-right: 5px; letter-spacing: 1px;">Cancel reason:</span> Cancelled by customer</p>
-        </div>
-      </div> -->
       <div style="background-color: red; padding: 10px 10px; background-color: #e9ecef;">
         <p style="margin: 0px; font-size: 26px; letter-spacing: 0.8px; font-weight: bold;">Order cancel notification</p>
       </div>
@@ -59,25 +51,25 @@
             <th style="padding: 15px 0px; background-color: #505250; color: white; letter-spacing: 1px; width: 20%;">Price</th>
           </tr>
           <tr>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 16px;">Amul taza toned milk</td>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 16px;">1</td>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 16px;">&#8377;1000.00</td>
+            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">Amul taza toned milk</td>
+            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">1</td>
+            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">&#8377;1000.00</td>
           </tr>
           <tr>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 16px;">Mortein Insta Vaporiser Mosquito Repellent (Refill) - Pack of 3</td>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 16px;">1</td>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 16px;">&#8377;1000.00</td>
+            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">Mortein Insta Vaporiser Mosquito Repellent (Refill) - Pack of 3</td>
+            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">1</td>
+            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">&#8377;1000.00</td>
           </tr>
         </table>
         <table style="border-collapse: collapse; width: 100%;">
           <tr>
-            <td style="width: 80%"></td>
-            <td style="width: 30%; padding: 5px 0px; font-size: 16px; font-weight: 600; letter-spacing: 1px;">Sub Total</td>
+            <td style="width: 50%"></td>
+            <td style="width: 40%; padding: 5px 0px; font-size: 16px; font-weight: 600; letter-spacing: 1px;">Sub Total</td>
             <td style="text-align: right; font-size: 15px; width: 10%;">&#8377;2000.00</td>
           </tr>
           <tr>
-            <td style="width: 80%"></td>
-            <td style="width: 30%; padding: 5px 0px; font-size: 16px; font-weight: 600; letter-spacing: 1px; border-bottom: 1px solid #D4DAD4;">Delivery Charges</td>
+            <td style="width: 10%"></td>
+            <td style="width: 80%; padding: 5px 0px; font-size: 16px; font-weight: 600; letter-spacing: 1px; border-bottom: 1px solid #D4DAD4;">Delivery Charges</td>
             <td style="text-align: right; font-size: 15px; border-bottom: 1px solid #D4DAD4; width: 10%;">&#8377;10.00</td>
           </tr>
           <tr>
