Send order cancellation mail
Signed-off-by: himanshuchauhan981 <himanshuchauhan981@gmail.com>

--- a/src/core/utils/mail/templates/orderCancellation.hbs
+++ b/src/core/utils/mail/templates/orderCancellation.hbs
@@ -17,7 +17,7 @@
             <td style="width: 100%;">
               <p style="margin: 0px 0px 4px 0px !important; font-size: small">
                 <span style="font-weight: 700; margin-right: 5px; letter-spacing: 1px;">Order #:</span> 
-                c91a3a64-4b3c-44b3-95bd-02923db0feca
+                {{order_number}}
               </p>
             </td>
           </tr>
@@ -25,14 +25,14 @@
             <td style="width: 100%;">
               <p style="margin: 0px 8px 4px 0px !important; font-size: small">
                 <span style="font-weight: 700; margin-right: 5px; letter-spacing: 1px;">Order date:</span>
-                2021-10-10 14:00:00
+                {{order_date}}
               </p>
             </td>
           </tr>
           <tr>
             <td style="width: 100%;">
               <p style="margin: 0px 8px 4px 0px !important; font-size: small">
-                <span style="font-weight: 700; margin-right: 5px; letter-spacing: 1px;">Cancel reason:</span> Cancelled by customer
+                <span style="font-weight: 700; margin-right: 5px; letter-spacing: 1px;">Cancel reason:</span> {{order_reason}}
               </p>
             </td>
           </tr>
@@ -50,32 +50,30 @@
             <th style="padding: 15px 0px; background-color: #505250; color: white; letter-spacing: 1px; width: 20%;">Quantity</th>
             <th style="padding: 15px 0px; background-color: #505250; color: white; letter-spacing: 1px; width: 20%;">Price</th>
           </tr>
-          <tr>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">Amul taza toned milk</td>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">1</td>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">&#8377;1000.00</td>
-          </tr>
-          <tr>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">Mortein Insta Vaporiser Mosquito Repellent (Refill) - Pack of 3</td>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">1</td>
-            <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">&#8377;1000.00</td>
-          </tr>
+
+          {{#each order_products}}
+            <tr>
+              <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">{{name}}</td>
+              <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">{{quantity}}</td>
+              <td style="border-bottom: 1px solid black; padding: 10px 5px; text-align: center; font-size: 14px;">&#8377;{{price}}</td>
+            </tr>
+          {{/each}}
         </table>
         <table style="border-collapse: collapse; width: 100%;">
           <tr>
             <td style="width: 50%"></td>
             <td style="width: 40%; padding: 5px 0px; font-size: 16px; font-weight: 600; letter-spacing: 1px;">Sub Total</td>
-            <td style="text-align: right; font-size: 15px; width: 10%;">&#8377;2000.00</td>
+            <td style="text-align: right; font-size: 15px; width: 10%;">&#8377;{{sub_total}}</td>
           </tr>
           <tr>
             <td style="width: 10%"></td>
             <td style="width: 80%; padding: 5px 0px; font-size: 16px; font-weight: 600; letter-spacing: 1px; border-bottom: 1px solid #D4DAD4;">Delivery Charges</td>
-            <td style="text-align: right; font-size: 15px; border-bottom: 1px solid #D4DAD4; width: 10%;">&#8377;10.00</td>
+            <td style="text-align: right; font-size: 15px; border-bottom: 1px solid #D4DAD4; width: 10%;">&#8377;{{delivery_charges}}</td>
           </tr>
           <tr>
             <td style="width: 80%"></td>
             <td style="width: 30%; padding: 5px 0px; font-size: 16px; font-weight: 600; letter-spacing: 1px;">Total Price</td>
-            <td style="text-align: right; font-size: 15px; width: 10%;">&#8377;2010.00</td>
+            <td style="text-align: right; font-size: 15px; width: 10%;">&#8377;{{total_amount}}</td>
           </tr>
         </table>
         <p style="font-weight: 800; letter-spacing: 0.9px; margin-bottom: 0; font-size: 19px;">We hope to see you again soon.</p>
